# quake3sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: basegame.cmake  identity.cmake  missionpack.cmake
cmake/compilers/: msvc.cmake
code/cgame/: cg_main.c  cg_marks.c  cg_newdraw.c  cg_players.c  cg_servercmds.c  cg_syscalls.c  cg_weapons.c
code/client/: cl_main.c  cl_mongoose.c  cl_mongoose.h  client.h
code/game/: ai_chat.c  ai_cmd.c  ai_dmq3.c  ai_team.c  bg_lib.c  bg_lib.h  bg_misc.c  g_active.c  g_local.h  g_main.c  g_syscalls.c  g_team.c  g_utils.c  q_math.c  q_shared.c  q_shared.h
code/q3_ui/: ui_main.c  ui_playermodel.c  ui_players.c  ui_saveconfig.c
code/qcommon/: common.c
code/ui/: ui_atoms.c  ui_main.c  ui_players.c  ui_shared.c  ui_syscalls.c
misc/linux/: server_compile.sh
misc/nsis/: Makefile
